Se agrego el generado de pdf aqui en el backend, se hicieron test unitarios y de integracion, se cambio la forma de almacenar la cascada de viajes